--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,31 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tourweek | Главная</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 </head>
 <body>
+
+<div class="uk-offcanvas-content">
+    <div class="uk-child-width-1-1 uk-height-viewport uk-flex uk-flex-wrap uk-flex-wrap-between">
+        <div>
+            <div class="uk-section uk-padding-remove uk-cover-container">
+                <img src="images/bg_purpose.png" alt="" uk-cover>
+
+            </div>
+
+            <div class="uk-section">
+                <div class="uk-container"></div>
+            </div>
+        </div>
+
+        <footer class="uk-section">
+            <div class="uk-container">
+            </div>
+        </footer>
+    </div>
+</div>
 
 </body>
 </html>
