inverse    , light navbar

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                 <img src="images/bg_pageheader_main.jpg" alt="" uk-cover>
 
                 <header>
-                    <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+                    <nav class="uk-navbar-container uk-navbar-transparent uk-light" uk-navbar>
                         <div class="uk-navbar-left">
                             <a class="uk-navbar-item uk-logo" href="/">
                                 <img src="images/logo_tourweek.png" alt="">
