inverse    , light navbar

--- a/src/index.html
+++ b/src/index.html
@@ -14,50 +14,53 @@
 <div class="uk-offcanvas-content">
     <div class="uk-child-width-1-1 uk-height-viewport uk-flex uk-flex-wrap uk-flex-wrap-between">
         <div>
-            <div class="uk-section uk-padding-remove uk-cover-container">
+            <div class="uk-section uk-padding-remove uk-cover-container uk-light">
                 <img src="images/bg_pageheader_main.jpg" alt="" uk-cover>
 
-                <header>
-                    <nav class="uk-navbar-container uk-navbar-transparent uk-light" uk-navbar>
-                        <div class="uk-navbar-left">
-                            <a class="uk-navbar-item uk-logo" href="/">
-                                <img src="images/logo_tourweek.png" alt="">
-                            </a>
-                            <a href="#offcanvas-overlay" class="uk-navbar-toggle" uk-navbar-toggle-icon uk-toggle></a>
-                        </div>
-                        <div class="uk-navbar-center">
-                            <ul class="uk-navbar-nav">
-                                <li><a href="#">Попутчики</a></li>
-                                <li><a href="#">Блоги</a></li>
-                                <li><a href="#">Страны</a></li>
-                                <li><a href="#">Интересные места</a></li>
-                                <li><a href="#">Визы</a></li>
-                                <li><a href="#">Фото</a></li>
-                                <li><a href="#">Статьи</a></li>
-                                <li><a href="#">Новости</a></li>
-                            </ul>
-                        </div>
-                        <div class="uk-navbar-right">
-                            <div class="uk-navbar-item">
-                                <a href="#" class="uk-button uk-button-small uk-button-orange">Авиабилеты</a>
+                <header class="uk-position-relative">
+                    <div class="uk-container">
+                        <nav class="uk-light" uk-navbar>
+                            <div class="uk-navbar-left">
+                                <a class="uk-navbar-item uk-logo" href="/">
+                                    <img src="images/logo_tourweek.png" alt="">
+                                </a>
+                                <a href="#offcanvas-overlay" class="uk-navbar-toggle" uk-navbar-toggle-icon
+                                   uk-toggle></a>
                             </div>
-                            <ul class="uk-navbar-nav">
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-search" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-sign-in" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
+                            <div class="uk-navbar-center">
+                                <ul class="uk-navbar-nav">
+                                    <li><a href="#">Попутчики</a></li>
+                                    <li><a href="#">Блоги</a></li>
+                                    <li><a href="#">Страны</a></li>
+                                    <li><a href="#">Интересные места</a></li>
+                                    <li><a href="#">Визы</a></li>
+                                    <li><a href="#">Фото</a></li>
+                                    <li><a href="#">Статьи</a></li>
+                                    <li><a href="#">Новости</a></li>
+                                </ul>
+                            </div>
+                            <div class="uk-navbar-right">
+                                <div class="uk-navbar-item">
+                                    <a href="#" class="uk-button uk-button-small uk-button-orange">Авиабилеты</a>
+                                </div>
+                                <ul class="uk-navbar-nav">
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-search" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-sign-in" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
                 </header>
 
-                <div class="uk-section uk-padding-remove-bottom">
+                <div class="uk-section uk-position-relative uk-padding-remove-bottom">
                     <div class="uk-container">
                         <h1><span class="uk-text-light">Поиск попутчиков</span> <br>
                             в путешествие
