--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -14,9 +14,11 @@
 <div class="uk-offcanvas-content">
     <div class="uk-child-width-1-1 uk-height-viewport uk-flex uk-flex-wrap uk-flex-wrap-between">
         <div>
+            <!--Pageheader-->
             <div class="uk-section uk-padding-remove uk-cover-container uk-light">
                 <img src="images/bg_pageheader_main.jpg" alt="" uk-cover>
 
+                <!--Header-->
                 <header class="uk-position-relative">
                     <div class="uk-container">
                         <nav class="uk-light" uk-navbar>
@@ -61,16 +63,65 @@
                 </header>
 
                 <div class="uk-section uk-position-relative uk-padding-remove-bottom">
-                    <div class="uk-container">
+                    <div class="uk-container uk-text-center">
                         <h1><span class="uk-text-light">Поиск попутчиков</span> <br>
                             в путешествие
                         </h1>
                         <div class="uk-margin-xlarge-bottom">
                             <a href="" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
                         </div>
+                        <ul class="uk-iconnav uk-flex-center uk-flex-middle uk-margin-medium-bottom">
+                            <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        </ul>
                     </div>
                 </div>
+            </div>
 
+            <div class="uk-section">
+                <div class="uk-container">
+                    <div class="uk-child-width-expand" uk-grid>
+                        <div>
+                            <div uk-grid>
+                                <div>
+                                    <h2>Интересное в мире</h2>
+                                </div>
+                                <div>
+                                    <button class="uk-button uk-button-simple-orange">Смотреть еще</button>
+                                </div>
+                            </div>
+                            <div class="uk-flex-stretch"
+                                 uk-grid uk-height-match="target: > div > .uk-card">
+                                <div></div>
+                            </div>
+
+
+                        </div>
+
+                        <div class="uk-width-1-5">
+                            banner
+                        </div>
+                        
+                        <div class="uk-width-1-4">
+                            <h3>Новости туризма</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="uk-section">
+                <div class="uk-container"></div>
+            </div>
+
+            <div class="uk-section">
+                <div class="uk-container"></div>
+            </div>
+
+            <div class="uk-section">
+                <div class="uk-container"></div>
             </div>
 
             <div class="uk-section">
