--- a/src/index.html
+++ b/src/index.html
@@ -93,20 +93,138 @@
                                     <button class="uk-button uk-button-simple-orange">Смотреть еще</button>
                                 </div>
                             </div>
-                            <div class="uk-flex-stretch"
-                                 uk-grid uk-height-match="target: > div > .uk-card">
-                                <div></div>
+
+                            <div class="uk-child-width-expand" uk-grid uk-height-match="target: > div > .uk-card">
+                                <div>
+                                    <a href="#" class="uk-card uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                        <img src="images/image_interesting_big.jpg" alt="" uk-cover>
+                                        <div class="uk-position-relative uk-text-lead">Мексиканские зарисовки. Путешествие по Юкатану с заездом в штат Чьяпас. Часть 4</div>
+                                    </a>
+                                </div>
+                                <div class="uk-width-medium">
+                                    <a href="#" class="uk-card">
+                                        <img src="images/banner.jpg" alt="" class="uk-width-1-1">
+                                    </a>
+                                </div>
                             </div>
 
-
+                            <div class="uk-child-width-expand" uk-grid uk-height-match="target: > div > .uk-card">
+                                <div>
+                                    <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                        <img src="images/image_interesting_1.jpg" alt="" uk-cover>
+                                        <div class="uk-position-relative">Ростуризм призвал туроператоров оповещать туристов о вспышке кори в Румынии</div>
+                                    </a>
+                                </div>
+                                <div>
+                                    <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                        <img src="images/image_interesting_2.jpg" alt="" uk-cover>
+                                        <div class="uk-position-relative">Ростуризм призвал туроператоров оповещать туристов о вспышке кори в Румынии</div>
+                                    </a>
+                                </div>
+                                <div class="uk-width-medium">
+                                    <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                        <img src="images/image_interesting_small.jpg" alt="" uk-cover>
+                                        <div class="uk-position-relative">Ростуризм призвал туроператоров оповещать туристов о вспышке кори в Румынии</div>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
 
-                        <div class="uk-width-1-5">
-                            banner
-                        </div>
-                        
-                        <div class="uk-width-1-4">
-                            <h3>Новости туризма</h3>
+                        <div class="uk-width-large">
+                            <h3 class="uk-text-light">Новости туризма</h3>
+                            
+                            <ul class="tm-news-list uk-list uk-list-large uk-list-divider">
+                                <li class="uk-child-width-expand uk-flex">
+                                    <div class="uk-width-auto uk-margin-small-right">
+                                        <img src="images/avatar_small_1.png" alt="">
+                                    </div>
+
+                                    <div>
+                                        <div class="uk-margin-small-bottom">
+                                            <a href="" class="uk-link-text">Кафедральный собор Валетты</a>
+                                        </div>
+                                        <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div>21.03.2017 11:01</div>
+                                            <div>
+                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                                <span>21</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="uk-child-width-expand uk-flex">
+                                    <div class="uk-width-auto uk-margin-small-right">
+                                        <img src="images/avatar_small_2.png" alt="">
+                                    </div>
+
+                                    <div>
+                                        <div class="uk-margin-small-bottom">
+                                            <a href="" class="uk-link-text">Секретная пещера тамплиеров в графстве Шропшир в Англии</a>
+                                        </div>
+                                        <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div>21.03.2017 11:01</div>
+                                            <div>
+                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                                <span>21</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="uk-child-width-expand uk-flex">
+                                    <div class="uk-width-auto uk-margin-small-right">
+                                        <img src="images/avatar_small_3.png" alt="">
+                                    </div>
+
+                                    <div>
+                                        <div class="uk-margin-small-bottom">
+                                            <a href="" class="uk-link-text">Кафедральный собор Валетты</a>
+                                        </div>
+                                        <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div>21.03.2017 11:01</div>
+                                            <div>
+                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                                <span>21</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li  class="uk-child-width-expand uk-flex">
+                                    <div class="uk-width-auto uk-margin-small-right">
+                                        <img src="images/avatar_small_4.png" alt="">
+                                    </div>
+
+                                    <div>
+                                        <div class="uk-margin-small-bottom">
+                                            <a href="" class="uk-link-text">Россиянин более четырёх лет проживал в Таиланде без визы</a>
+                                        </div>
+                                        <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div>21.03.2017 11:01</div>
+                                            <div>
+                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                                <span>21</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="uk-child-width-expand uk-flex">
+                                    <div class="uk-width-auto uk-margin-small-right">
+                                        <img src="images/avatar_small_5.png" alt="">
+                                    </div>
+
+                                    <div>
+                                        <div class="uk-margin-small-bottom">
+                                            <a href="" class="uk-link-text">Россиянин более четырёх лет проживал в Таиланде без визы</a>
+                                        </div>
+                                        <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div>21.03.2017 11:01</div>
+                                            <div>
+                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                                <span>21</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
