main page content

--- a/src/index.html
+++ b/src/index.html
@@ -243,10 +243,9 @@
                 </div>
             </div>
 
+            <!--Search for travel companions-->
             <div class="uk-section uk-section-muted">
                 <div class="uk-container">
-
-                    <!--Search for travel companions-->
                     <div>
                         <div class="uk-flex-between uk-margin-bottom" uk-grid>
                             <div>
@@ -476,14 +475,12 @@
                             <a href="#" class="uk-button uk-button-simple-orange">Показать еще</a>
                         </div>
                     </div>
-
                 </div>
             </div>
 
+            <!--New blogs-->
             <div class="uk-section">
                 <div class="uk-container">
-
-                    <!--New blogs-->
                     <h2 class="uk-text-center">Новое в блогах</h2>
 
                     <div class="uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid uk-height-match="target: > div > .uk-card">
@@ -627,26 +624,21 @@
                     <div class="uk-margin-medium-top uk-text-center">
                         <a href="#" class="uk-button uk-button-simple-orange">Показать еще</a>
                     </div>
-
                 </div>
             </div>
 
+            <!--Photo gallery-->
             <div class="uk-section uk-section-muted">
                 <div class="uk-container">
                     <div class="uk-child-width-1-2@m" uk-grid>
                         <div>
-
-                            <!--Photo of the day-->
                             <h2>Фото дня</h2>
                             <div>
                                 <img src="images/image_photo_big.jpg" alt="" class="uk-width-1-1">
                             </div>
-
                         </div>
 
                         <div>
-
-                            <!--Latest photos-->
                             <h3>Последние:</h3>
                             <div class="uk-child-width-1-2" uk-grid>
                                 <div>
@@ -662,7 +654,6 @@
                                     <img src="images/image_photo_4.jpg" alt="" class="uk-width-1-1">
                                 </div>
                             </div>
-
                         </div>
                     </div>
 
@@ -719,6 +710,7 @@
             </div>
         </div>
 
+        <!--Footer-->
         <footer class="uk-section">
             <div class="uk-container">
             </div>
