--- a/src/index.html
+++ b/src/index.html
@@ -713,6 +713,59 @@
         <!--Footer-->
         <footer class="uk-section">
             <div class="uk-container">
+                <div class="uk-child-width-auto uk-grid-large" uk-grid>
+                    <div>
+                        <a href="/" class="uk-logo">
+                            <img src="images/logo_tourweek_footer.png" alt="">
+                        </a>
+                    </div>
+
+                    <div class="uk-width-expand">
+                        <div class="uk-flex-between" uk-grid>
+                            <div>
+                                <ul class="uk-nav uk-nav-default">
+                                    <li><a href="#">О проекте</a></li>
+                                    <li><a href="#">Реклама</a></li>
+                                    <li><a href="#">Напишите нам</a></li>
+                                </ul>
+                            </div>
+                            <div>
+                                <ul class="uk-nav uk-nav-default">
+                                    <li><a href="#">Попутчики</a></li>
+                                    <li><a href="#">Блоги</a></li>
+                                    <li><a href="#">Страны</a></li>
+                                    <li><a href="#">Города</a></li>
+                                </ul>
+                            </div>
+                            <div>
+                                <ul class="uk-nav uk-nav-default">
+                                    <li><a href="#">Достопримечательности</a></li>
+                                    <li><a href="#">Фото</a></li>
+                                    <li><a href="#">Интересное</a></li>
+                                    <li><a href="#">Новости</a></li>
+                                </ul>
+                            </div>
+                            <div>
+                                <ul class="uk-nav uk-nav-default">
+                                    <li><a href="#">Справочник туриста</a></li>
+                                    <li><a href="#">Табло аэропортов</a></li>
+                                    <li><a href="#">Отзывы об авиакомпаниях</a></li>
+                                    <li><a href="#">Архив блогов</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div>
+                        <ul class="uk-iconnav uk-flex-center uk-flex-middle">
+                            <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
