--- a/src/index.html
+++ b/src/index.html
@@ -488,7 +488,7 @@
                             <div class="uk-card uk-card-small uk-child-width-1-1 uk-flex uk-flex-wrap uk-flex-wrap-between">
                                 <div uk-margin>
                                     <div class="uk-card-media-top uk-margin-bottom">
-                                        <img src="images/image_blog_1.jpg" alt="">
+                                        <img src="images/image_blog_1.jpg" alt="" class="uk-width-1-1">
                                     </div>
                                     <div class="uk-text-small uk-text-uppercase uk-text-truncate">
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
@@ -522,7 +522,7 @@
                             <div class="uk-card uk-card-small uk-child-width-1-1 uk-flex uk-flex-wrap uk-flex-wrap-between">
                                 <div uk-margin>
                                     <div class="uk-card-media-top uk-margin-bottom">
-                                        <img src="images/image_blog_2.jpg" alt="">
+                                        <img src="images/image_blog_2.jpg" alt="" class="uk-width-1-1">
                                     </div>
                                     <div class="uk-text-small uk-text-uppercase uk-text-truncate">
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
@@ -556,7 +556,7 @@
                             <div class="uk-card uk-card-small uk-child-width-1-1 uk-flex uk-flex-wrap uk-flex-wrap-between">
                                 <div uk-margin>
                                     <div class="uk-card-media-top uk-margin-bottom">
-                                        <img src="images/image_blog_3.jpg" alt="">
+                                        <img src="images/image_blog_3.jpg" alt="" class="uk-width-1-1">
                                     </div>
                                     <div class="uk-text-small uk-text-uppercase uk-text-truncate">
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
@@ -590,7 +590,7 @@
                             <div class="uk-card uk-card-small uk-child-width-1-1 uk-flex uk-flex-wrap uk-flex-wrap-between">
                                 <div uk-margin>
                                     <div class="uk-card-media-top uk-margin-bottom">
-                                        <img src="images/image_blog_4.jpg" alt="">
+                                        <img src="images/image_blog_4.jpg" alt="" class="uk-width-1-1">
                                     </div>
                                     <div class="uk-text-small uk-text-uppercase uk-text-truncate">
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
@@ -703,7 +703,7 @@
                             отзывы, рассказы и фотографии, опубликованные на сайте www.tourweek.ru являются
                             интеллектуальной собственностью их авторов. Полная или частичная перепечатка материалов сайта допускается
                             только с письменного разрешения авторов рассказов.</p>
-                        <p class="uk-margin-medium-top uk-text-bold uk-text-large">Все пожелания, замечания и
+                        <p class="uk-margin-medium-top uk-text-bold uk-text-medium">Все пожелания, замечания и
                             предложения пожалуйста присылайте на info@tourweek.ru</p>
                     </div>
                 </div>
