--- a/src/index.html
+++ b/src/index.html
@@ -21,28 +21,33 @@
 
                 <!--Header-->
                 <header class="uk-position-relative">
-                    <div class="uk-container">
-                        <nav class="uk-light" uk-navbar>
-                            <div class="uk-navbar-left">
+                    <nav class="uk-light" uk-navbar="mode: click; dropbar: true;">
+
+                            <div class="uk-navbar-center">
                                 <a class="uk-navbar-item uk-logo" href="/">
                                     <img src="images/logo_tourweek.png" alt="">
                                 </a>
                                 <a href="#offcanvas-overlay" class="uk-navbar-toggle" uk-navbar-toggle-icon
                                    uk-toggle></a>
-                            </div>
-                            <div class="uk-navbar-center">
                                 <ul class="uk-navbar-nav">
                                     <li><a href="#">Попутчики</a></li>
                                     <li><a href="#">Блоги</a></li>
-                                    <li><a href="#">Страны</a></li>
+                                    <li>
+                                        <a href="#">Страны</a>
+                                        <div class="uk-navbar-dropdown">
+                                            <ul class="uk-nav uk-navbar-dropdown-nav">
+                                                <li class="uk-active"><a href="#">Active</a></li>
+                                                <li><a href="#">Item</a></li>
+                                                <li><a href="#">Item</a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
                                     <li><a href="#">Интересные места</a></li>
                                     <li><a href="#">Визы</a></li>
                                     <li><a href="#">Фото</a></li>
                                     <li><a href="#">Статьи</a></li>
                                     <li><a href="#">Новости</a></li>
                                 </ul>
-                            </div>
-                            <div class="uk-navbar-right">
                                 <div class="uk-navbar-item">
                                     <a href="#" class="uk-button uk-button-small uk-button-orange">Авиабилеты</a>
                                 </div>
@@ -59,8 +64,8 @@
                                     </li>
                                 </ul>
                             </div>
+
                         </nav>
-                    </div>
                 </header>
 
                 <div class="uk-section uk-position-relative uk-padding-remove-bottom">
