--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
                 <!--Header-->
                 <header class="uk-position-relative">
-                    <nav class="uk-light" uk-navbar="mode: click; dropbar: true;">
+                    <nav class="uk-light" uk-navbar>
 
                             <div class="uk-navbar-center">
                                 <a class="uk-navbar-item uk-logo" href="/">
@@ -34,7 +34,101 @@
                                     <li><a href="#">Блоги</a></li>
                                     <li>
                                         <a href="#">Страны</a>
-                                        <div class="uk-navbar-dropdown">
+                                        <div class="uk-navbar-dropdown" uk-drop="mode: click; boundary: !nav; boundary-align: true; pos: bottom-justify;">
+                                            <div uk-slider>
+                                                <ul class="uk-slider-items">
+                                                    <li>
+                                                        <ul class="uk-column-1-5">
+                                                            <li><a href="#">Абхазия</a></li>
+                                                            <li><a href="#">Австралия</a></li>
+                                                            <li><a href="#">Австрия</a></li>
+                                                            <li><a href="#">Азербайджан</a></li>
+                                                            <li><a href="#">Андорра</a></li>
+                                                            <li><a href="#">Аргентина</a></li>
+                                                            <li><a href="#">Армения</a></li>
+                                                            <li><a href="#">Багамы</a></li>
+                                                            <li><a href="#">Беларусь</a></li>
+                                                            <li><a href="#">Бельгия</a></li>
+                                                            <li><a href="#">Болгария</a></li>
+                                                            <li><a href="#">Бразилия</a></li>
+                                                            <li><a href="#">Великобритания</a></li>
+                                                            <li><a href="#">Венгрия</a></li>
+                                                            <li><a href="#">Венесуэла</a></li>
+                                                            <li><a href="#">Вьетнам</a></li>
+                                                            <li><a href="#">Германия</a></li>
+                                                            <li><a href="#">Греция</a></li>
+                                                            <li><a href="#">Грузия</a></li>
+                                                            <li><a href="#">Дания</a></li>
+                                                            <li><a href="#">Доминикана</a></li>
+                                                            <li><a href="#">Египет</a></li>
+                                                            <li><a href="#">Израиль</a></li>
+                                                            <li><a href="#">Индия</a></li>
+                                                            <li><a href="#">Индонезия</a></li>
+                                                            <li><a href="#">Ирландия</a></li>
+                                                            <li><a href="#">Исландия</a></li>
+                                                            <li><a href="#">Испания</a></li>
+                                                            <li><a href="#">Италия</a></li>
+                                                            <li><a href="#">Казахстан</a></li>
+                                                            <li><a href="#">Камбоджа</a></li>
+                                                            <li><a href="#">Канада</a></li>
+                                                            <li><a href="#">Кения</a></li>
+                                                            <li><a href="#">Кипр</a></li>
+                                                            <li><a href="#">Киргизия</a></li>
+                                                            <li><a href="#">Китай</a></li>
+                                                            <li><a href="#">Коста-Рика</a></li>
+                                                            <li><a href="#">Куба</a></li>
+                                                            <li><a href="#">Лаос</a></li>
+                                                            <li><a href="#">Латвия</a></li>
+                                                            <li><a href="#">Ливан</a></li>
+                                                            <li><a href="#">Маврикий</a></li>
+                                                            <li><a href="#">Малайзия</a></li>
+                                                            <li><a href="#">Мальдивы</a></li>
+                                                            <li><a href="#">Мальта</a></li>
+                                                            <li><a href="#">Марокко</a></li>
+                                                            <li><a href="#">Мексика</a></li>
+                                                            <li><a href="#">Монако</a></li>
+                                                            <li><a href="#">Мьянма</a></li>
+                                                            <li><a href="#">Непал</a></li>
+                                                            <li><a href="#">Нидерланды</a></li>
+                                                            <li><a href="#">Новая Зеландия</a></li>
+                                                            <li><a href="#">Норвегия</a></li>
+                                                            <li><a href="#">ОАЭ</a></li>
+                                                            <li><a href="#">Перу</a></li>
+                                                            <li><a href="#">Польша</a></li>
+                                                            <li><a href="#">Португалия</a></li>
+                                                            <li><a href="#">Россия</a></li>
+                                                            <li><a href="#">США</a></li>
+                                                            <li><a href="#">Сейшелы</a></li>
+                                                            <li><a href="#">Сербия</a></li>
+                                                            <li><a href="#">Сингапур</a></li>
+                                                            <li><a href="#">Словакия</a></li>
+                                                            <li><a href="#">Словения</a></li>
+                                                            <li><a href="#">Таджикистан</a></li>
+                                                            <li><a href="#">Таиланд</a></li>
+                                                            <li><a href="#">Тунис</a></li>
+                                                            <li><a href="#">Турция</a></li>
+                                                            <li><a href="#">Узбекистан</a></li>
+                                                            <li><a href="#">Филиппины</a></li>
+                                                            <li><a href="#">Финляндия</a></li>
+                                                            <li><a href="#">Франция</a></li>
+                                                            <li><a href="#">Хорватия</a></li>
+                                                            <li><a href="#">Черногория</a></li>
+                                                            <li><a href="#">Чехия</a></li>
+                                                            <li><a href="#">Чили</a></li>
+                                                            <li><a href="#">Швейцария</a></li>
+                                                            <li><a href="#">Швеция</a></li>
+                                                            <li><a href="#">Шотландия</a></li>
+                                                            <li><a href="#">Шри-Ланка</a></li>
+                                                            <li><a href="#">Эквадор</a></li>
+                                                            <li><a href="#">Эстония</a></li>
+                                                            <li><a href="#">ЮАР</a></li>
+                                                            <li><a href="#">Южная Корея</a></li>
+                                                            <li><a href="#">Ямайка</a></li>
+                                                            <li><a href="#">Япония</a></li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+                                            </div>
                                             <ul class="uk-nav uk-navbar-dropdown-nav">
                                                 <li class="uk-active"><a href="#">Active</a></li>
                                                 <li><a href="#">Item</a></li>
