--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,8 @@
                                         <a href="#">Страны</a>
                                         <div class="uk-navbar-dropdown" uk-drop="mode: click; boundary: !nav; boundary-align: true; pos: bottom-justify;">
                                             <div class="uk-container">
-                                                <div class="tm-country-slider-wrap"></div>
-                                                <div class="tm-country-slider-wrap" uk-slider>
-                                                    <div class="uk-position-relative">
+                                                <div class="" uk-slider>
+                                                    <div class="uk-position-relative tm-country-slider-wrap">
                                                         <div class="uk-slider-container">
                                                             <ul class="uk-slider-items uk-child-width-1-1">
                                                                 <li>
@@ -139,9 +138,9 @@
                                                             </ul>
                                                         </div>
 
-                                                        <a class="uk-position-center-left-out uk-position-small"
+                                                        <a class="uk-position-center-left"
                                                            href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-                                                        <a class="uk-position-center-right-out uk-position-small"
+                                                        <a class="uk-position-center-right"
                                                            href="#" uk-slidenav-next uk-slider-item="next"></a>
                                                     </div>
 
